# R-Type

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  GAME_GUIDE.md  LICENSE.md  README.md  USAGE_GUIDE.md  config-client.json  config-server.json  gitleaks.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  deploy-doxygen.yml  gitleaks.yml  mirror.yml
client/: .gitignore  CMakeLists.txt  README.md
client/include/Client/: ArgsHandler.hpp  Client.hpp  Common.hpp  Game.hpp  GameConfig.hpp  Menu.hpp  ProjectileManager.hpp  SpriteRect.hpp  WeaponSystem.hpp
client/include/Client/Scenes/: Game.hpp  Lobby.hpp  Menu.hpp  Room.hpp  Settings.hpp
client/include/Client/Scenes/game/multi/: ConfigMulti.hpp
client/include/Client/Scenes/game/solo/: ConfigSolo.hpp  GameSolo.hpp
client/include/Client/Systems/: Animation.hpp  Asteroid.hpp  Audio.hpp  Beam.hpp  Collision.hpp  Enemy.hpp  Explosion.hpp  LoadingAnimation.hpp  Pixel.hpp  PlayerDirection.hpp  Projectile.hpp  Spawn.hpp  Sprite.hpp  Systems.hpp  Text.hpp  Weapon.hpp
client/include/R-Type/: ArgsHandler.hpp  Client.hpp  Common.hpp
client/include/R-Type/Renderer/: EventHandler.hpp  Renderer.hpp
client/include/RType/: client.hpp
client/src/: Game.cpp  Menu.cpp  ProjectileManager.cpp  WeaponSystem.cpp  argsHandler.cpp  client.cpp  event.cpp  lobbyScene.cpp  main.cpp
client/src/renderer/: eventHandler.cpp  renderer.cpp
client/src/scenes/: Game.cpp  Menu.cpp  Room.cpp  game.cpp  lobby.cpp  menu.cpp  settings.cpp
client/src/scenes/game/multi/: configMulti.cpp
client/src/scenes/game/solo/: configSolo.cpp  gameSolo.cpp
client/src/systems/: weapon.cpp
cmake/modules/: ClangFormat.cmake  CopyAssets.cmake  MakeDoc.cmake  MakeVersion.cmake
documentation/: .gitignore  RNP-spec.txt
documentation/.doxygen/: Doxyfile
modules/: CMakeLists.txt
modules/Audio/: CMakeLists.txt
modules/Audio/SFMLAudio/: CMakeLists.txt
modules/Audio/SFMLAudio/include/SFMLAudio/: SFMLAudio.hpp
modules/Audio/SFMLAudio/src/: SFMLAudio.cpp
modules/ECS/: CMakeLists.txt
modules/ECS/include/ECS/: Component.hpp  Entity.hpp  Registry.hpp  Systems.hpp
modules/ECS/include/ECS/Interfaces/: ISystems.hpp
modules/ECS/src/: registry.cpp
modules/Engine/: CMakeLists.txt
modules/Engine/include/Engine/: Engine.hpp  IScene.hpp  Scene.hpp  SceneManager.hpp  SettingsManager.hpp  Systems.hpp
modules/Engine/include/Engine/Interfaces/: IScene.hpp
modules/Engine/src/: Engine.cpp  engine.cpp
modules/Game/: CMakeLists.txt
modules/Game/R-Type/Client/: CMakeLists.txt
modules/Game/R-Type/Client/include/R-TypeClient/: LobbyScene.hpp  RTypeClient.hpp
modules/Game/R-Type/Client/src/: rtypeClient.cpp
modules/Game/R-Type/Server/: CMakeLists.txt
modules/Game/R-Type/Server/include/R-TypeServer/: RTypeServer.hpp
modules/Interfaces/include/Interfaces/: AGameClient.hpp  AGameServer.hpp  IAudio.hpp  IGameClient.hpp  IGameServer.hpp  INetworkClient.hpp  INetworkServer.hpp  IRenderer.hpp
modules/Interfaces/include/Interfaces/Protocol/: Protocol.hpp
modules/Network/: CMakeLists.txt
modules/Network/Asio/Client/: CMakeLists.txt
modules/Network/Asio/Client/include/AsioClient/: AsioClient.hpp
modules/Network/Asio/Client/include/NetworkClient/: NetworkClient.hpp
modules/Network/Asio/Client/src/: asioClient.cpp
modules/Network/Asio/Server/: CMakeLists.txt
modules/Network/Asio/Server/include/AsioServer/: AsioServer.hpp
modules/Network/Asio/Server/include/NetworkServer/: NetworkServer.hpp
modules/Network/Asio/Server/src/: AsioServer.cpp  NetworkServer.cpp
modules/Network/Client/: CMakeLists.txt
modules/Network/Server/: CMakeLists.txt
modules/Network/Server/include/NetworkServer/: NetworkServer.hpp
modules/Network/Server/src/: NetworkServer.cpp
modules/Renderer/: CMakeLists.txt
modules/Renderer/SFMLRenderer/: CMakeLists.txt
modules/Renderer/SFMLRenderer/include/SFMLRenderer/: SFMLRenderer.hpp
modules/Renderer/SFMLRenderer/src/: SFMLRenderer.cpp
modules/Utils/: CMakeLists.txt
modules/Utils/include/Utils/: Logger.hpp  PluginLoader.hpp  Utils.hpp
modules/Utils/include/Utils/Interfaces/: IPlugin.hpp
modules/Utils/src/: utils.cpp
plugins/: CMakeLists.txt  README.md
plugins/Audio/SFML/: CMakeLists.txt
plugins/Audio/SFML/src/: SFMLAudio.cpp  entrypoint.cpp
plugins/Game/: CMakeLists.txt  README.md
plugins/Game/R-Type/: CMakeLists.txt
plugins/Game/R-Type-Local/: CMakeLists.txt
plugins/Game/R-Type-Local/src/: RTypeGameLocal.cpp  entrypoint.cpp
plugins/Game/R-Type-Multi/: CMakeLists.txt
plugins/Game/R-Type-Multi/include/RTypeGameMulti/: RTypeGameMulti.hpp
plugins/Game/R-Type-Multi/src/: RTypeGameMulti.cpp  entrypoint.cpp
plugins/Game/R-Type/include/RTypeGame/: AGamePlugin.hpp  Common.hpp  GameConfig.hpp  ProjectileManager.hpp  RTypeGame.hpp
plugins/Game/R-Type/include/RTypeGame/Scenes/: GameSolo.hpp  Menu.hpp
plugins/Game/R-Type/include/RTypeGame/Systems/: Weapon.hpp
plugins/Game/R-Type/src/: AGamePlugin.cpp  ProjectileManager.cpp  RTypeGame.cpp  entrypoint.cpp
plugins/Game/R-Type/src/Scenes/: GameSolo.cpp  Menu.cpp
plugins/Game/R-Type/src/Systems/: Weapon.cpp
plugins/Game/RType/Client/: CMakeLists.txt
plugins/Game/RType/Server/: CMakeLists.txt
plugins/Renderer/: CMakeLists.txt
plugins/Renderer/SFML/: CMakeLists.txt
plugins/Renderer/Vulkan/: CMakeLists.txt
plugins/Renderer/Vulkan/include/VULKN/: VULKN.hpp
plugins/Renderer/Vulkan/src/: entrypoint.cpp
scripts/unix/: build.sh  nc-client.sh  run-doc.sh
scripts/unix/ubuntu/: install-dependencies.sh
scripts/windows/: client.ps1
server/: .gitignore  CMakeLists.txt  README.md
server/include/R-Type/: ArgsHandler.hpp  Server.hpp
server/include/RType/: server.hpp
server/include/Server/: ArgsHandler.hpp  Common.hpp  SceneManager.hpp  Server.hpp
server/include/Server/Interfaces/: IScene.hpp
server/include/Server/Scenes/: Level_0.hpp  Level_1.hpp
server/include/Server/Systems/: Systems.hpp
server/src/: argsHandler.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt
(+21 files in other folders)
